# memos-cli

./: CHANGELOG.md  Cargo.toml  README.md  memos.openapi.yaml  openapi-generator-config.json
crates/memos-api/: Cargo.toml  README.md
crates/memos-api/.openapi-generator/: FILES
crates/memos-api/docs/: ActivityServiceApi.md  ApiHttpBody.md  Apiv1ActivityMemoCommentPayload.md  Apiv1ActivityPayload.md  Apiv1ActivityVersionUpdatePayload.md  Apiv1FieldMapping.md  Apiv1IdentityProvider.md  Apiv1IdentityProviderConfig.md  Apiv1IdentityProviderType.md  Apiv1OAuth2Config.md  Apiv1UserSetting.md  Apiv1WorkspaceCustomProfile.md  Apiv1WorkspaceGeneralSetting.md  Apiv1WorkspaceMemoRelatedSetting.md  Apiv1WorkspaceSetting.md  Apiv1WorkspaceStorageSetting.md  Apiv1WorkspaceStorageSettingStorageType.md  AuthServiceApi.md  GooglerpcStatus.md  IdentityProviderServiceApi.md  InboxServiceApi.md  InboxServiceUpdateInboxRequest.md  ListNodeKind.md  MarkdownServiceApi.md  MemoServiceApi.md  MemoServiceRenameMemoTagBody.md  MemoServiceSetMemoRelationsBody.md  MemoServiceSetMemoResourcesBody.md  MemoServiceUpdateMemoRequest.md  MemoServiceUpsertMemoReactionBody.md  ProtobufAny.md  ResourceServiceApi.md  ResourceServiceUpdateResourceRequest.md  SettingIsTheSettingToUpdate.md  TableNodeRow.md  TheIdentityProviderToUpdate.md  UserRole.md  UserServiceApi.md  UserServiceCreateUserAccessTokenBody.md  UserServiceUpdateUserRequest.md  (+78 more)
crates/memos-api/src/apis/: activity_service_api.rs  auth_service_api.rs  configuration.rs  identity_provider_service_api.rs  inbox_service_api.rs  markdown_service_api.rs  memo_service_api.rs  mod.rs  resource_service_api.rs  user_service_api.rs  webhook_service_api.rs  workspace_service_api.rs  workspace_setting_service_api.rs
crates/memos-api/src/models/: api_http_body.rs  apiv1_activity_memo_comment_payload.rs  apiv1_activity_payload.rs  apiv1_activity_version_update_payload.rs  apiv1_field_mapping.rs  apiv1_identity_provider.rs  apiv1_identity_provider_config.rs  apiv1_identity_provider_type.rs  apiv1_o_auth2_config.rs  apiv1_user_setting.rs  apiv1_workspace_custom_profile.rs  apiv1_workspace_general_setting.rs  apiv1_workspace_memo_related_setting.rs  apiv1_workspace_setting.rs  apiv1_workspace_storage_setting.rs  apiv1_workspace_storage_setting_storage_type.rs  googlerpc_status.rs  inbox_service_update_inbox_request.rs  list_node_kind.rs  memo_service_rename_memo_tag_body.rs  (+89 more)
crates/memos-cli/: Cargo.toml
crates/memos-cli-ui/: Cargo.toml
crates/memos-cli-ui/src/: lib.rs  list.rs
crates/memos-cli-ui/src/list/: detail.rs  list.rs
crates/memos-cli/src/: auth.rs  editor.rs  io.rs  main.rs
crates/memos-cli/src/commands/: create.rs  list.rs  login.rs  mod.rs
