[package]
name = "memos-cli"
version = "0.2.3"
edition = "2021"
description.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[[bin]]
name = "memo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
inquire = "0.7.5"
memos-api = { version = "0.1.0", path = "../memos-api" }
serde = { version = "1.0.210", features = ["derive"] }
tempfile = "3.13.0"
toml = "0.8.19"
url = { version = "2.5.2", features = ["serde"] }
