[package]
name = "memos-cli"
version = "0.3.0"
edition = "2021"
description.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[[bin]]
name = "memo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
clap-verbosity = "2.1.0"
env_logger = "0.11.7"
inquire = "0.7.5"
log = "0.4.26"
memos-api = { version = "0.3.0", path = "../memos-api" }
memos-cli-ui = { version = "0.3.0", path = "../memos-cli-ui" }
serde = { version = "1.0.210", features = ["derive"] }
tempfile = "3.13.0"
toml = "0.8.19"
url = { version = "2.5.2", features = ["serde"] }
